mule-user-guide/v/3.2/filtering-invalid-requests.adoc
= Filtering Invalid Requests

Sometimes you need to prevent your Mule application from processing requests known to be invalid or that have invalid data. This example shows you how to use filters to reject such invalid requests.

== What You Will Learn

* How to use filters to control which requests are processed
* How to configure a particular kind of filter, the "Wildcard" filter

* http://www.youtube.com/watch?v=K4aYKIVh1_M
image:http://www.mulesoft.org/sites/all/themes/litejazz/images/documentation/echo-flow.png[image]]
*Watch a video*

See this example built and run in Mule Studio

10 minutes

== Build It Now!

=== Prerequisites

This example adds a new filter to the existing 'core-concepts' project created in the link:/mule-user-guide/v/3.2/understanding-the-mule-message[Understanding the Mule Message] example.

=== Building the Example

\1. Make sure the "Message Flow" view is open in Mule Studio:

image:/documentation-3.2/download/attachments/50036844/studioStartingConfiguration.png?version=1&modificationDate=1358792961182[image]

\2. Select the "Filters" panel and drag the "Wildcard" filter, dropping it on top of the arrow leaving the HTTP inbound end-point:

image:/documentation-3.2/download/attachments/50036844/studioAddWildcardFilter.png?version=1&modificationDate=1358792981497[image]

\3. Double click the Wildcard filter you just added and enter "/Mule-*" in the pattern field. Be sure to check the "Case Sensitive" check box:

image:/documentation-3.2/download/attachments/50036844/studioConfigureWildcardFilter.png?version=1&modificationDate=1358793003414[image]

\4. Click the Documentation tab and fill in the name and description fields:

image:/documentation-3.2/download/attachments/50036844/studioConfigureWildcardFilterDoc.png?version=1&modificationDate=1358793027094[image]

== Running the Example

To run the example, right click in the project tree, select Run As.. --> Mule Application. You'll see logging information in the console window as the application starts.

In a browser window go to http://localhost:8082/Fred and you should see the following on screen:

image:/documentation-3.2/download/attachments/50036844/studioBrowserOutputUnmatched.png?version=1&modificationDate=1358793090852[image]

The application quite rudely refused to greet Fred. Now go to go to http://localhost:8082/Mule-Fred instead. You should see the following:

image:/documentation-3.2/download/attachments/50036844/studioBrowserOutputMatched.png?version=1&modificationDate=1358793114911[image]

Notice that the application now has a Mule bias.

== What Just Happened?

* You added a filter to a flow. The filter conditionally controls which data is allowed to pass through to the flow
* You modified an HTTP inbound end-point to reject requests that do not start with "Mule-". Rejected requests are just parroted back on the HTTP response and are not passed on to the HelloComponent.

== References

* [MULE3EXAMPLES:Working with Components]

== Next Steps

[%autowidth.spread]
|===
|http://www.mulesoft.org/display/32X/Understanding+the+Mule+Message[« Understanding the Mule Message] |http://www.mulesoft.org/display/32X/Home[Back to Index] |http://www.mulesoft.org/display/32X/Transforming+Data+in+a+Flow[Transforming Data in a Flow »]
|===

'''''
