mule-user-guide/v/3.3/filtering-invalid-requests.adoc
= Filtering Invalid Requests

Sometimes you need to prevent your Mule application from processing requests known to be invalid or that have invalid data. This example shows you how to use filters to reject such invalid requests.

== What You Will Learn

* How to use filters to control which requests are processed
* How to configure a particular kind of filter, the "Wildcard" filter
+
[cols="20a,75a",width=65%]
|===
|
video::K4aYKIVh1_M[youtube] |
*Watch a video*

See this example built and run in Mule Studio
|===

== Build It Now! _(10 minutes)_

=== Prerequisites

This example adds a new filter to the existing 'core-concepts' project created in the link:https://docs.mulesoft.com/mule-user-guide/v/3.3/adding-business-logic-to-a-flow[Adding Business Logic to a Flow] example.

=== Building the Example

. Make sure the "Message Flow" view is open in Mule Studio:
+
image:studioStartingConfiguration.png[studioStartingConfiguration]
+
. Select the "Filters" panel and drag the "Wildcard" filter, dropping it on top of the arrow leaving the HTTP inbound end-point:
+
image:studioAddWildcardFilter.png[studioAddWildcardFilter]

. Double click the Wildcard filter you just added and enter "/Mule-**" in the pattern field and "Mule-** Filter" in the name field. Be sure to check the "Case Sensitive" check box:
+
image:studioConfigureWildcardFilter.png[studioConfigureWildcardFilter]

. Click the Documentation tab and fill in the description field:
+
image:studioConfigureWildcardFilterDoc.png[studioConfigureWildcardFilterDoc]

=== Running the Example

To run the example, right click in the project tree, select Run As.. --> Mule Application. You'll see logging information in the console window as the application starts.

In a browser window go to http://localhost:8082/Fred and you should see the following on screen:

image:studioBrowserOutputUnmatched.png[studioBrowserOutputUnmatched]

The application quite rudely refused to greet Fred. Now go to go to http://localhost:8082/Mule-Fred instead. You should see the following:

image:studioBrowserOutputMatched.png[studioBrowserOutputMatched]

Notice that the application now has a Mule bias.

== What Just Happened?

* You added a filter to a flow. The filter conditionally controls which data is allowed to pass through to the flow
* You modified an HTTP inbound end-point to reject requests that do not start with "Mule-". Rejected requests are not passed on.

== References

* link:https://docs.mulesoft.com/mule-user-guide/v/3.3/developing-components[Working with Components]

== Next Steps

Next: link:https://docs.mulesoft.com/mule-user-guide/v/3.3/transforming-data-in-a-flow[Transforming Data in a Flow]

Previous: link:https://docs.mulesoft.com/mule-user-guide/v/3.3/understanding-the-mule-message[Understanding the Mule Message]
